	PR tree-optimization/81741 	PR tree-optimization/71947 	* tree-ssa-dom.c: Include tree-inline.h. 	(record_temporary_equivalences): Only record SSA_NAME = SSA_NAME 	equivalences if one is more expensive to compute than the other. 	* tree-ssa-scopedtables.h (class const_or_copies): Make 	record_const_or_copy_raw method private. 	(class avail_exprs_stack): New method simplify_binary_operation. 	* tree-ssa-scopedtables.c (avail_exprs_stack::lookup_avail_expr): Call 	avail_exprs_stack::simplify_binary_operation as needed. 	(avail_exprs_stack::simplify_binary_operation): New function.

PR tree-optimization/81741
	PR tree-optimization/71947
	* gcc.dg/tree-ssa/pr81741.c: New test.
	* gcc.dg/tree-ssa/pr71947-7.c: New test.
	* gcc.dg/tree-ssa/pr71947-8.c: New test.
	* gcc.dg/tree-ssa/pr71947-9.c: New test.
	* gcc.dg/tree-ssa/pr71941-1.c: Tweak expected output.
	* gcc.dg/tree-ssa/pr71941-2.c: Tweak expected output.
	* gcc.dg/tree-ssa/pr71941-3.c: Tweak expected output.
	* gcc.dg/tree-ssa/20030922-2.c: xfail.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@251279 138bc75d-0d04-0410-961f-82ee72b054a4